fix: Adjust position of element for improved alignment

--- a/css/main.css
+++ b/css/main.css
@@ -616,8 +616,8 @@ body {
             display: block !important;
             color: white !important;
             position: fixed !important;
-            right: 10px !important;
-            top: 15px !important;
+            right: 13px !important;
+            top: 13px !important;
             transform: none !important;
             font-size: 28px !important;
             font-weight: 700 !important;
